[package]
name = "tokio_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
member = [".", "migration"]


[dependencies]
migration = {path = "./migration"}
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
actix = "0.13.0"
actix-web = "4"
actix-cors = "0.6.4" 
env_logger = "0.10.0"
sea-orm = {version = "0.10.5", features=["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
chrono = {version = "0.4.23", features = ["serde"]}